[package]
name = "fourmegrl"
version = "0.1.0"
authors = ["Harri Pellikka <harri_pellikka@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }